--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "LakshmiLokesh",
   "license": "ISC",
+  "start":"node server",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
